# zero-dds-snippets

./: .gitignore  README.md
.github/workflows/: ci.yml
async-pubsub/: Cargo.toml  README.md
async-pubsub/src/: main.rs
bindings-rust-main/: Cargo.toml  README.md
bindings-rust-main/src/: main.rs
c-ffi-hello/: README.md  hello.c
cpp-hello/: README.md  hello.cpp
cpp-typed/: README.md  temperature.idl  typed.cpp
cross-vendor-dynamic-xtypes/: README.md  dyn.idl  dyn_app.idl
cross-vendor-dynamic-xtypes/cyclone/: README.md  pub.c
cross-vendor-dynamic-xtypes/fastdds/: CMakeLists.txt  README.md  pub.cxx
cross-vendor-dynamic-xtypes/opendds/: CMakeLists.txt  README.md  dyn.idl  pub.cpp  rtps.ini
cross-vendor-dynamic-xtypes/rti/: README.md
cross-vendor-rich/: README.md  roundtrip-perf.md
cross-vendor-rich/cyclone/: README.md  cyc_rich.py  cyc_rich_pub.py  cyc_rich_sub.py
cross-vendor-rich/fastdds/: CMakeLists.txt  README.md  pub.cxx  sub.cxx
cross-vendor-rich/opendds/: CMakeLists.txt  README.md  Rich.idl  pub.cpp  sub.cpp
cross-vendor-rich/rti/: README.md  Rich_publisher.cxx  Rich_subscriber.cxx  USER_QOS_PROFILES.xml
cross-vendor-rich/zerodds/: Cargo.toml  README.md  Rich.idl  build.rs
cross-vendor-shapes/: README.md
cross-vendor-shapes/cyclone/: README.md  run.sh  shapes_pub.py  shapes_sub.py
cross-vendor-shapes/fastdds/: README.md  ShapeType.idl  run.sh
cross-vendor-shapes/opendds/: CMakeLists.txt  README.md  ShapeType.idl  publisher.cpp  subscriber.cpp
cross-vendor-shapes/rti/: README.md
csharp-async/: Program.cs  README.md
csharp-quickstart/: Program.cs  README.md
csharp-typed/: OmgTypesShim.cs  Program.cs  README.md  Temperature.cs  csharp-typed.csproj
decoded-recorder/: README.md  sensor.idl
hello-publisher/: Cargo.toml  README.md
hello-publisher/src/: main.rs
iceoryx-cyclone-zerocopy/: README.md  cyclone_pub.c  cyclone_read.xml  cyclone_sub.c  cyclone_write.xml  run.sh  sample.idl
idl-conformance/: .gitignore  README.md
idl-conformance/_interop/: CANONICAL.md  features.idl  verify.sh
idl-conformance/_interop/rust-features/: Cargo.toml
idl-conformance/_interop/rust-features/src/: main.rs
idl-conformance/_qos/rust/: Cargo.toml  README.md
idl-conformance/_qos/rust/src/: main.rs
idl-conformance/c/: 10_keys.h  Makefile  README.md  roundtrip.c  sensor.h  sensor.idl
idl-conformance/cpp/: README.md  build.sh  combo_roundtrip.cpp
idl-conformance/csharp/: OmgTypesShim.cs  Program.cs  README.md  conformance_combo.cs  conformance_combo.idl  csharp.csproj
idl-conformance/java/: App.java  README.md  build-and-run.sh
idl-conformance/proofs/endianness/harness-rust/: Cargo.toml
idl-conformance/proofs/endianness/harness-rust/src/: main.rs
idl-conformance/proofs/keyhash/: Cargo.toml  README.md
idl-conformance/proofs/keyhash/idl/: keyhash_cases.idl
idl-conformance/proofs/keyhash/src/: main.rs
idl-conformance/proofs/structural/demo/zerodds/: Cargo.toml  MapEnum.idl  build.rs
idl-conformance/proofs/typeobject/: Cargo.toml  README.md
idl-conformance/proofs/typeobject/extractors/: cyclone_extract.py  fastdds_extract.cpp  rti_extract.c
idl-conformance/proofs/typeobject/goldens/: appendable.complete.hash  appendable.minimal.hash  choice_union.complete.hash  choice_union.minimal.hash  color_enum.complete.hash  color_enum.minimal.hash  inner.complete.hash  inner.minimal.hash  long_seq4_alias.complete.hash  long_seq4_alias.minimal.hash  mutable.complete.hash  mutable.minimal.hash  nested.complete.hash  nested.minimal.hash  plain.complete.hash  plain.minimal.hash
idl-conformance/proofs/typeobject/idl/: typeobject.idl
idl-conformance/proofs/typeobject/src/: main.rs
idl-conformance/python/: 20_mixed_combo.py  README.md  combo_telemetry.idl  combo_telemetry.py  conformance_roundtrip.py  optionals_handwritten.py  reading_union.idl  reading_union.py
idl-conformance/rust/: Cargo.toml  README.md
idl-conformance/rust/idl/: combo_no_array.idl
idl-conformance/rust/src/: main.rs
idl-fixed-decimal/: README.md  fixed.idl
java-omgpsm-pose/: App.java  Pose.java  README.md
java-quickstart-bytes/: App.java  README.md
java-typed-temperature/: App.java  README.md
java-union-codegen-illustration/: README.md
pubsub-roundtrip/: Cargo.toml  README.md
python-aio/: README.md  async_chatter.py
python-hello-bytes/: README.md  hello.py
python-idl-struct/: README.md  temp.py
python-qos-writer/: README.md  qos_writer.py
qos-cookbook/: Cargo.toml  README.md
recorder-replay-workflow/: README.md  run.sh  shapes.idl
rust-audit-factory-chain/: Cargo.toml  README.md
rust-audit-loggingplugin/: Cargo.toml  README.md
rust-audit-otlp/: Cargo.toml  README.md
rust-audit-scrubbing/: Cargo.toml  README.md
rust-audit-securitybundle-realpart/: Cargo.toml  README.md
rust-audit-securitybundle-realpart/src/: main.rs
rust-audit-syslog/: Cargo.toml  README.md
rust-audit-syslog/src/: main.rs
rust-complex-types-roundtrip/: Cargo.toml  README.md  build.rs  demo.idl
rust-complex-types-roundtrip/src/: main.rs
rust-dev-install-hello/: Cargo.toml  README.md
rust-dev-install-runtimeconfig/: Cargo.toml  README.md
rust-security-plugin-chain/: Cargo.toml  README.md
rust-transport-trait/: Cargo.toml  README.md
rust-transport-tuning/: Cargo.toml  README.md
rust-typed/: Cargo.toml  README.md
rust-typed/src/: main.rs
rust-xcdr1-representation/: Cargo.toml  README.md  build.rs  demo.idl
rust-xcdr1-representation/src/: main.rs
typescript-node-async/: README.md  package.json  tsconfig.json
typescript-node-quickstart/: README.md  package.json
typescript-node-typed/: README.md  package.json  tsconfig.json
typescript-node-website-snippet/: README.md  async.ts  hello.ts  tsconfig.json  typed.ts
typescript-wasm-quickstart/: README.md  package.json  run-with-bridge.mjs  tsconfig.json
typescript-wasm-vite-config/: README.md  tsconfig.json  vite.config.ts
typescript-wasm-website-snippet/: README.md  app.ts  tsconfig.json
zerodds-router-quickstart/: README.md  router.json  router.xml  run.sh
(+203 files in other folders)
