[package]
name = "rust-audit-securitybundle-realpart"
version = "0.1.0"
edition = "2024"

[workspace]

[features]
# Swap the DDS-Security crypto provider to the FIPS-capable backend (aws-lc-rs)
# across the whole security stack — `cargo run --features fips`.
fips = ["zerodds-dcps/fips", "zerodds-security-runtime/fips"]

[dependencies]
zerodds-security = { path = "../../crates/security" }
zerodds-security-logging = { path = "../../crates/security-logging" }
zerodds-security-runtime = { path = "../../crates/security-runtime" }
zerodds-dcps = { path = "../../crates/dcps", features = ["security"] }
