[package]
name = "rust-complex-types-roundtrip"
version = "0.1.0"
edition = "2024"
build = "build.rs"

# Standalone example: empty [workspace] so it does NOT join the parent
# zerodds workspace; path-deps reach into ../../crates.
[workspace]

[dependencies]
# The generated full DdsType impl: encode/decode (XCDR2) + encode_xcdr1/
# decode_xcdr1 (classic CDR), plus the TypeObject + SQL-filter glue it carries.
zerodds-dcps = { path = "../../crates/dcps" }
zerodds-cdr = { path = "../../crates/cdr" }
zerodds-types = { path = "../../crates/types" }
zerodds-sql-filter = { path = "../../crates/sql-filter" }

[build-dependencies]
zerodds-idl = { path = "../../crates/idl" }
zerodds-idl-rust = { path = "../../crates/idl-rust" }
