cmake_minimum_required(VERSION 3.12)
project(rich_od CXX)
find_package(OpenDDS REQUIRED)
add_library(rich_idl)
opendds_target_sources(rich_idl PUBLIC Rich.idl)
target_link_libraries(rich_idl PUBLIC OpenDDS::Dcps)
add_executable(od_pub pub.cpp)
target_link_libraries(od_pub OpenDDS::Dcps OpenDDS::Rtps OpenDDS::Rtps_Udp rich_idl)
add_executable(od_sub sub.cpp)
target_link_libraries(od_sub OpenDDS::Dcps OpenDDS::Rtps OpenDDS::Rtps_Udp rich_idl)
