cmake_minimum_required(VERSION 3.12)
project(opendds_shapes CXX)
find_package(OpenDDS REQUIRED)
add_library(shape_idl)
opendds_target_sources(shape_idl PUBLIC ShapeType.idl)
target_link_libraries(shape_idl PUBLIC OpenDDS::Dcps)
set(libs OpenDDS::Dcps OpenDDS::Rtps OpenDDS::Rtps_Udp shape_idl)
add_executable(opendds_pub publisher.cpp)
target_link_libraries(opendds_pub ${libs})
add_executable(opendds_sub subscriber.cpp)
target_link_libraries(opendds_sub ${libs})
